[metadata]
name = cryptojsaesdecrypt
version = 0.0.3
author = Aleem Isiaka
author_email = aleemisiaka@gmail.com
description = Decrypt CryptoJS AES ciphers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/limistah/cryptojsaesdecrypt
project_urls =
    Bug Tracker = https://github.com/limistah/cryptojsaesdecryptissues